Use CSS Grid to position sections

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -8,6 +9,10 @@
 <body>
     <div class="container">
         <div class="nav">
+            <div class="nav_title">
+                <img src="#" alt="" class="nav_icon">
+                <h1>Dashboard</h1>
+            </div>
             <ul>
                 <li>Home</li>
                 <li>Profile</li>
@@ -22,87 +27,79 @@
                 <li>Privacy</li>
             </ul>
         </div>
-
-        <div class="top_bar">
-            <div class="top_bar_upper">
-                <div class="search"><img src="" alt=""><input type="text" name="" id=""></div>
-                <div class="profile_container">
-                    <img src="" alt="" class="notifications"><img src="" alt="" class="usericon">
-                    <p class="username"></p>
-                </div>
-            </div>
-            <div class="top_bar_lower">
-                <div class="welcome">
-                    <img src="" alt="" class="usericon">
-                    <p></p>
-                    <h3 class="username_welcome"></h3>
-                </div>
-                <div class="buttons">
-                    <button class="button_new">New</button>
-                    <button class="button_upload">Upload</button>
-                    <button class="button_share">Share</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="main">
-            <div class="projects">
-                <h3>Your Projects</h3>
-                <div class="proj_card">
-
-                </div>
-                <div class="proj_card">
-
-                </div>
-                <div class="proj_card">
-
-                </div>
-                <div class="proj_card">
-
-                </div>
-                <div class="proj_card">
-
-                </div>
-                <div class="proj_card">
-
-                </div>
-            </div>
-            <div class="announcements">
-                <h3>Announcements</h3>
-                <div class="announce_card_container">
-                    <div class="announce_card">
-
+    
+        <div class="main_section">
+            <div class="top_bar">
+                <div class="top_bar_upper">
+                    <div class="search"><img src="" alt=""><input type="text" name="" id=""></div>
+                    <div class="profile_container">
+                        <img src="#" alt="" class="notifications"><img src="" alt="" class="usericon">
+                        <p class="username">Clint Zold</p>
                     </div>
-                    <div class="announce_card">
-
+                </div>
+                <div class="top_bar_lower">
+                    <div class="welcome">
+                        <img src="" alt="" class="usericon">
+                        <p></p>
+                        <h3 class="username_welcome">Clint Zold</h3>
                     </div>
-                    <div class="announce_card">
-
+                    <div class="buttons">
+                        <button class="button_new">New</button>
+                        <button class="button_upload">Upload</button>
+                        <button class="button_share">Share</button>
                     </div>
                 </div>
             </div>
-            <div class="trending">
-                <h3>Trending</h3>
-                <div class="trends">
-                    <div class="trend">
-                        <div class="trending_user">
-                            <img src="#" alt="" class="usericon">
-                            <p class="user_tag"></p>
-                            <p></p>
+            <div class="main">
+                <div class="projects">
+                    <h3>Your Projects</h3>
+                    <div class="proj_card">
+                    </div>
+                    <div class="proj_card">
+                    </div>
+                    <div class="proj_card">
+                    </div>
+                    <div class="proj_card">
+                    </div>
+                    <div class="proj_card">
+                    </div>
+                    <div class="proj_card">
+                    </div>
+                </div>
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announce_card_container">
+                        <div class="announce_card">
+                        </div>
+                        <div class="announce_card">
+                        </div>
+                        <div class="announce_card">
                         </div>
                     </div>
-                    <div class="trend">
-                            <img src="#" alt="" class="usericon">
-                            <p class="user_tag"></p>
-                            <p></p>
-                    </div>
-                    <div class="trend">
-                            <img src="#" alt="" class="usericon">
-                            <p class="user_tag"></p>
-                            <p></p>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trends">
+                        <div class="trend">
+                            <div class="trending_user">
+                                <img src="#" alt="" class="usericon">
+                                <p class="user_tag"></p>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                                <img src="#" alt="" class="usericon">
+                                <p class="user_tag"></p>
+                                <p></p>
+                        </div>
+                        <div class="trend">
+                                <img src="#" alt="" class="usericon">
+                                <p class="user_tag"></p>
+                                <p></p>
+                        </div>
                     </div>
                 </div>
-            </div>
+        </div>
         </div>
 
     </div>
