Add icons and dummy content to elements

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
                 
             </div>
             <ul class="basic_nav">
-                <li><img src="" alt="">Home</li>
-                <li><img src="" alt="">Profile</li>
-                <li><img src="" alt="">Messages</li>
-                <li><img src="" alt="">History</li>
-                <li><img src="" alt="">Tasks</li>
-                <li><img src="" alt="">Communities</li>
+                <li><img class="nav_icon" src="./img/home.svg" alt="">Home</li>
+                <li><img class="nav_icon" src="./img/account-box.svg" alt="">Profile</li>
+                <li><img class="nav_icon" src="./img/message-text.svg" alt="">Messages</li>
+                <li><img class="nav_icon" src="./img/history.svg" alt="">History</li>
+                <li><img class="nav_icon" src="./img/calendar-check.svg" alt="">Tasks</li>
+                <li><img class="nav_icon" src="./img/account-group.svg" alt="">Communities</li>
             </ul>
             <ul class="advanced_nav">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img class="nav_icon" src="./img/cog.svg" alt="">Settings</li>
+                <li><img class="nav_icon" src="./img/help.svg" alt="">Support</li>
+                <li><img class="nav_icon" src="./img/information.svg" alt="">Privacy</li>
             </ul>
         </div>
     
         <div class="main_section">
             <div class="top_bar">
                 <div class="top_bar_upper">
-                    <div class="search"><img src="" alt=""><input type="text" name="" id=""></div>
+                    <div class="search"><img src="./img/magnify.svg" alt="" class="nav_icon"><input type="text" name="" id=""></div>
                     <div class="profile_container">
-                        <img src="#" alt="" class="notifications"><img src="./img/me.jpg" alt="" class="usericon">
+                        <img src="./img/bell.svg" alt="" class="notification"><img src="./img/me.jpg" alt="" class="usericon">
                         <p class="username">Clint Zold</p>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                         <div class="proj_card">
@@ -71,7 +71,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                         <div class="proj_card">
@@ -79,7 +79,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                         <div class="proj_card">
@@ -87,7 +87,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                         <div class="proj_card">
@@ -95,7 +95,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                         <div class="proj_card">
@@ -103,7 +103,7 @@
                             <div class="card_text">
                                 <p class="card_title">Lorem ipsum</p>
                                 <p class="card_subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa animi, alias in deserunt nam aliquid dolores delectus laboriosam a eos repudiandae voluptates similique id hic asperiores, porro voluptatem architecto error!</p>
-                                <div class="card_icons"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"><img src="" alt="" class="card_icon"></div>
+                                <div class="card_icons"><img src="./img/plus-box.svg" alt="" class="card_icon"><img src="./img/share-variant.svg" alt="" class="card_icon"></div>
                             </div>
                         </div>
                     </div>
@@ -112,10 +112,13 @@
                     <h3>Announcements</h3>
                     <div class="announce_card_container">
                         <div class="announce_card">
+                            <p>Ratione, repudiandae. Ex nesciunt beatae consequatur delectus molestias quos rerum, accusamus architecto dolores placeat ipsam fugiat asperiores laboriosam aperiam dolor unde voluptate.</p>
                         </div>
                         <div class="announce_card">
+                            <p>Ratione, repudiandae. Ex nesciunt beatae consequatur delectus molestias quos rerum, accusamus architecto dolores placeat ipsam fugiat asperiores laboriosam aperiam dolor unde voluptate.</p>
                         </div>
                         <div class="announce_card">
+                            <p>Ratione, repudiandae. Ex nesciunt beatae consequatur delectus molestias quos rerum, accusamus architecto dolores placeat ipsam fugiat asperiores laboriosam aperiam dolor unde voluptate.</p>
                         </div>
                     </div>
                 </div>
@@ -123,21 +126,26 @@
                     <h3>Trending</h3>
                     <div class="trends">
                         <div class="trend">
-                            <div class="trending_user">
-                                <img src="#" alt="" class="usericon">
-                                <p class="user_tag"></p>
-                                <p></p>
-                            </div>
+                                <img src="./img/Cohen-Linus-Torvalds.webp" alt="" class="usericon">
+                                <div class="userhandle">
+                                    <p class="user_tag"><strong>@linustorvalds</strong></p>
+                                    <p>Linus Torvalds</p>
+                                </div>
                         </div>
                         <div class="trend">
-                                <img src="#" alt="" class="usericon">
-                                <p class="user_tag"></p>
-                                <p></p>
+                                <img src="./img/thumb@2x.jpg" alt="" class="usericon">
+                                <div class="userhandle">
+                                    <p class="user_tag"><strong>@theprimeagen</strong></p>
+                                    <p>Prime Time</p>
+                                </div>
                         </div>
                         <div class="trend">
-                                <img src="#" alt="" class="usericon">
-                                <p class="user_tag"></p>
-                                <p></p>
+                                <img src="./img/66bf86d9ef6b37fd2d5ef71f_Lex Fridman.png" alt="" class="usericon">
+
+                                <div class="userhandle">
+                                    <p class="user_tag"><strong>@lexfridman</strong></p>
+                                    <p>Lex</p>
+                                </div>
                         </div>
                     </div>
                 </div>
